# rocket-ssg

./: Cargo.toml  README.md  Shuttle.toml
src/lib/: lib.rs  parser.rs  router.rs
src/lib/routes/: catchers.rs  index.rs  mod.rs  styles.rs
templates/: hello_world.md  styles.css
tests/: endpoints.rs
