[package]
name = "rocket-ssg"
version = "0.1.0"
edition = "2021"
description = "A static site genertaor using Rocket and Shuttle"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev"]
repository = "https://github.com/sentinel1909/rocket-ssg"
license = 'MIT'
keywords = ["rocket, shuttle"]
publish = false

[[bin]]
name = "rocket-ssg"
path = "src/bin/httpd.rs"

[lib]
name = "rocket_ssg"
path = "src/lib/lib.rs"

[dependencies]
pulldown-cmark = "0.9.3"
rocket = "0.5.0-rc.4"
shuttle-rocket = "0.33.0"
shuttle-runtime = "0.33.0"
tokio = "1.34.0"
